--- a/contatti.html
+++ b/contatti.html
@@ -476,7 +476,7 @@
                         
                         <div class="text-center">
                             <a 
-                                href="https://goo.gl/maps/example" 
+                                href="https://www.google.com/maps/search/?api=1&query=Via+Cimitile+4%2C+80035+Nola+NA%2C+Italy" 
                                 target="_blank"
                                 class="inline-block bg-gradient-to-r from-gray-600 to-gray-700 text-white px-6 py-3 rounded-lg hover:bg-gradient-to-r from-gray-500 to-gray-600 hover:text-gray-800 transition-colors font-semibold"
                             >
@@ -504,14 +504,14 @@
                 </p>
                 <div class="flex flex-col sm:flex-row gap-4 justify-center">
                     <a 
-                        href="tel:+390811234567" 
+                        href="tel:+390818234914" 
                         class="bg-red-600 text-white px-8 py-4 rounded-lg font-bold text-lg hover:bg-red-700 transition-colors shadow-lg"
                     >
                         <i class="fas fa-phone mr-2"></i>
                         Chiama Subito: +39 081 8234914
                     </a>
                     <a 
-                        href="https://wa.me/390811234567" 
+                        href="https://wa.me/390818234914" 
                         target="_blank"
                         class="bg-green-600 text-white px-8 py-4 rounded-lg font-bold text-lg hover:bg-green-700 transition-colors shadow-lg"
                     >
