--- a/contatti.html
+++ b/contatti.html
@@ -640,6 +640,13 @@
         </div>
     </footer>
 
+    <!-- EmailJS per invio email -->
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
+    <script type="text/javascript">
+        // Inizializza EmailJS (opzionale - se configurato)
+         emailjs.init("po89_tdPToDfT8o4U"); 
+    </script>
+    
     <script src="js/main.js"></script>
     <script src="js/modern-theme.js"></script>
     <script>
