foto vecchie aggiunte

--- a/chi-siamo.html
+++ b/chi-siamo.html
@@ -166,8 +166,8 @@
                     </div>
                     
                     <div class="grid grid-cols-2 gap-4">
-                        <img src="images/placeholder-gallery.svg" alt="Giuseppe Santaniello, fondatore" class="w-full h-64 object-cover rounded-lg shadow-lg">
-                        <img src="images/placeholder-gallery.svg" alt="Sede storica dell'agenzia" class="w-full h-64 object-cover rounded-lg shadow-lg">
+                        <img src="images/old_photos/FINALE_1.png" alt="Giuseppe Santaniello, fondatore" class="w-full h-64 object-cover rounded-lg shadow-lg">
+                        <img src="images/old_photos/FINALE_2.png" alt="Sede storica dell'agenzia" class="w-full h-64 object-cover rounded-lg shadow-lg">
                     </div>
                 </div>
             </div>
@@ -237,7 +237,7 @@
                             <div class="ml-8">
                                 <h3 class="text-xl font-bold text-gray-800 mb-2">La Fondazione</h3>
                                 <p class="text-gray-600">
-                                    Giuseppe Santaniello apre la prima sede dell'agenzia funebre a Nola, 
+                                    Pasquale Santaniello apre la prima sede dell'agenzia funebre a Nola, 
                                     con l'obiettivo di servire la comunità locale con dedizione e rispetto.
                                 </p>
                             </div>
@@ -251,7 +251,7 @@
                             <div class="ml-8">
                                 <h3 class="text-xl font-bold text-gray-800 mb-2">La Seconda Generazione</h3>
                                 <p class="text-gray-600">
-                                    Antonio Santaniello, figlio del fondatore, entra nell'azienda e introduce nuovi servizi, 
+                                    Michele Santaniello, nipote del fondatore, entra nell'azienda e introduce nuovi servizi, 
                                     ampliando l'attività e aprendo la prima casa funeraria moderna.
                                 </p>
                             </div>
@@ -279,7 +279,7 @@
                             <div class="ml-8">
                                 <h3 class="text-xl font-bold text-gray-800 mb-2">La Terza Generazione</h3>
                                 <p class="text-gray-600">
-                                    Marco e Lucia Santaniello portano avanti la tradizione di famiglia, 
+                                    Pasquale e Giuseppe Santaniello portano avanti la tradizione di famiglia, 
                                     introducendo i necrologi online e modernizzando tutti i servizi dell'agenzia.
                                 </p>
                             </div>
@@ -301,12 +301,13 @@
                     <div class="bg-white rounded-lg shadow-lg overflow-hidden">
                         <img src="images/placeholder-person.svg" alt="Marco Santaniello" class="w-full h-64 object-cover">
                         <div class="p-6">
-                            <h3 class="text-xl font-bold text-gray-800 mb-2">Marco Santaniello</h3>
+                            <h3 class="text-xl font-bold text-gray-800 mb-2">Michele Santaniello</h3>
                             <p class="text-gray-300 font-semibold mb-3">Direttore Generale</p>
                             <p class="text-gray-600 text-sm leading-relaxed">
-                                Nipote del fondatore, Marco rappresenta la terza generazione della famiglia. 
-                                Laureato in Scienze della Comunicazione, ha modernizzato l'agenzia introducendo 
-                                i servizi digitali mantenendo sempre i valori tradizionali.
+                                Nipote del fondatore, Michele rappresenta la seconda generazione della famiglia. 
+                                Michele ha guidato l'azienda per oltre 30 anni. 
+                                Oggi mantiene un ruolo consultivo, condividendo la sua vasta esperienza 
+                                con le nuove generazioni.
                             </p>
                         </div>
                     </div>
@@ -315,10 +316,10 @@
                     <div class="bg-white rounded-lg shadow-lg overflow-hidden">
                         <img src="images/placeholder-person.svg" alt="Lucia Santaniello" class="w-full h-64 object-cover">
                         <div class="p-6">
-                            <h3 class="text-xl font-bold text-gray-800 mb-2">Lucia Santaniello</h3>
+                            <h3 class="text-xl font-bold text-gray-800 mb-2">Giuseppe Santaniello</h3>
                             <p class="text-gray-300 font-semibold mb-3">Responsabile Servizi alle Famiglie</p>
                             <p class="text-gray-600 text-sm leading-relaxed">
-                                Sorella di Marco, Lucia si occupa dell'assistenza diretta alle famiglie. 
+                                Fratello di Pasquale, Giuseppe si occupa dell'assistenza diretta alle famiglie. 
                                 La sua sensibilità e professionalità l'hanno resa un punto di riferimento 
                                 per chi attraversa momenti difficili.
                             </p>
@@ -329,12 +330,13 @@
                     <div class="bg-white rounded-lg shadow-lg overflow-hidden">
                         <img src="images/placeholder-person.svg" alt="Antonio Santaniello Sr." class="w-full h-64 object-cover">
                         <div class="p-6">
-                            <h3 class="text-xl font-bold text-gray-800 mb-2">Antonio Santaniello</h3>
-                            <p class="text-gray-300 font-semibold mb-3">Presidente Onorario</p>
+                            <h3 class="text-xl font-bold text-gray-800 mb-2">Pasquale Santaniello</h3>
+                            <p class="text-gray-300 font-semibold mb-3">Direttore tecnico</p>
                             <p class="text-gray-600 text-sm leading-relaxed">
-                                Figlio del fondatore, Antonio ha guidato l'azienda per oltre 40 anni. 
-                                Oggi mantiene un ruolo consultivo, condividendo la sua vasta esperienza 
-                                con le nuove generazioni.
+                                Nipote del fondatore e fratello di Giuseppe, 
+                                Con le sue competenze, ha modernizzato l'agenzia introducendo 
+                                i servizi digitali mantenendo sempre i valori tradizionali.
+                          
                             </p>
                         </div>
                     </div>
