--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
                 <!-- Fiori e Omaggi -->
                 <div class="text-center group bg-white rounded-2xl p-8 shadow-lg hover:shadow-2xl transition-all duration-500 transform hover:-translate-y-2">
                     <div class="bg-gradient-to-br from-gray-800 to-gray-900 text-white w-20 h-20 rounded-2xl flex items-center justify-center mx-auto mb-6 group-hover:from-gray-700 group-hover:to-gray-800 transition-all duration-300 shadow-lg">
-                        <i class="fas fa-flower text-2xl"></i>
+                        <i class="fas fa-seedling text-2xl"></i>
                     </div>
                     <h3 class="text-2xl font-bold mb-4 text-gray-900">Fiori & Omaggi</h3>
                     <p class="text-gray-600 mb-6 leading-relaxed">
