aggiunto stato civile

--- a/necrologio-detail.html
+++ b/necrologio-detail.html
@@ -166,6 +166,11 @@
                                         <span class="font-semibold mr-2">Età:</span>
                                         <span id="obituary-age">...</span>
                                     </p>
+                                    <p class="flex items-center" id="marital-status-row" style="display: none;">
+                                        <i class="fas fa-ring text-gray-300 mr-3 w-5"></i>
+                                        <span class="font-semibold mr-2">Stato Civile:</span>
+                                        <span id="obituary-marital-status">...</span>
+                                    </p>
                                 </div>
                                 
                                 <!-- Funeral details -->
