--- a/admin.html
+++ b/admin.html
@@ -699,8 +699,8 @@
                     <!-- Età -->
                     <div>
                         <label class="block text-sm font-bold text-gray-900 mb-2">Età</label>
-                        <input type="number" id="age" min="0" max="120" class="w-full p-4 border border-gray-300 rounded-xl focus:border-gray-600 focus:ring-2 focus:ring-gray-200 transition-all">
-                        <small class="text-gray-600">Verrà calcolata automaticamente dalle date (se inserite) o inserire manualmente</small>
+                        <input type="number" id="age" min="0" max="120" placeholder="Es: 75" class="w-full p-4 border border-gray-300 rounded-xl focus:border-gray-600 focus:ring-2 focus:ring-gray-200 transition-all">
+                        <small class="text-gray-600">Campo opzionale - Verrà calcolata automaticamente dalle date (se inserite) o inserire manualmente</small>
                     </div>
 
                     <!-- Foto -->
@@ -898,9 +898,14 @@
                         age--;
                     }
                     
-                    document.getElementById('age').value = age;
-                } else if (!birthDate && deathDate) {
-                    // Se non c'è data di nascita, lascia il campo età vuoto
+                    // Solo se l'età è valida (> 0)
+                    if (age > 0) {
+                        document.getElementById('age').value = age;
+                    } else {
+                        document.getElementById('age').value = '';
+                    }
+                } else {
+                    // Se non ci sono entrambe le date, lascia il campo età vuoto
                     document.getElementById('age').value = '';
                 }
             }
@@ -1061,7 +1066,7 @@
                             ${photoHtml}
                             <div class="flex-1">
                                 <h3 class="text-xl font-bold text-gray-900">${formData.name}</h3>
-                                <p class="text-gray-600">${formData.birthDate || 'Data nascita non specificata'} - ${formData.deathDate} ${formData.age ? '(' + formData.age + ' anni)' : ''}</p>
+                                <p class="text-gray-600">${formData.birthDate || 'Data nascita non specificata'} - ${formData.deathDate} ${formData.age && formData.age !== '' ? '(' + formData.age + ' anni)' : ''}</p>
                                 <p class="text-sm text-gray-500"><i class="fas fa-map-marker-alt mr-1"></i>${formData.city}</p>
                                 ${maritalInfo}
                                 ${funeralInfo}
