--- a/necrologio-detail.html
+++ b/necrologio-detail.html
@@ -8,13 +8,15 @@
     <meta name="keywords" content="necrologio, condoglianze, agenzia funebre, Santaniello">
     
     <!-- Open Graph / Facebook -->
-    <meta property="og:type" content="article">
+    <meta property="og:type" content="website">
     <meta property="og:url" content="" id="og-url">
     <meta property="og:title" content="Necrologio - Onoranze Funebri Santaniello" id="og-title">
     <meta property="og:description" content="Invia le tue condoglianze alla famiglia. Onoranze Funebri Santaniello." id="og-description">
-    <meta property="og:image" content="images/placeholder-person.svg" id="og-image">
+    <meta property="og:image" content="" id="og-image">
+    <meta property="og:image:secure_url" content="" id="og-image-secure">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
+    <meta property="og:image:alt" content="Foto del defunto" id="og-image-alt">
     <meta property="og:site_name" content="Onoranze Funebri Santaniello">
     <meta property="og:locale" content="it_IT">
     <meta property="article:published_time" content="" id="og-published-time">
