--- a/necrologio-detail.html
+++ b/necrologio-detail.html
@@ -21,7 +21,7 @@
     <meta property="og:type" content="article">
     <meta property="og:title" content="Necrologio - Onoranze Funebri Santaniello" id="og-title">
     <meta property="og:description" content="Dettagli necrologio. Invia le tue condoglianze alla famiglia." id="og-description">
-    <meta property="og:image" content="https://images.unsplash.com/photo-1507003211169-0a1dd7228f2d?w=1200&h=630&fit=crop&crop=face" id="og-image">
+    <meta property="og:image" content="https://zivcmlajjrmlzfvfgfjp.supabase.co/storage/v1/object/public/necrologi-files/photos/1735005316000_defunto.jpg" id="og-image">
     <meta property="og:url" content="" id="og-url">
     
     <!-- Meta tag aggiuntivi per ottimizzazione condivisione -->
@@ -36,7 +36,7 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Necrologio - Onoranze Funebri Santaniello" id="twitter-title">
     <meta name="twitter:description" content="Dettagli necrologio. Invia le tue condoglianze alla famiglia." id="twitter-description">
-    <meta name="twitter:image" content="https://images.unsplash.com/photo-1507003211169-0a1dd7228f2d?w=1200&h=630&fit=crop&crop=face" id="twitter-image">
+    <meta name="twitter:image" content="https://zivcmlajjrmlzfvfgfjp.supabase.co/storage/v1/object/public/necrologi-files/photos/1735005316000_defunto.jpg" id="twitter-image">
     
     <!-- Script per pre-renderizzazione meta tag da URL parameters -->
     <script>
