--- a/necrologio-detail.html
+++ b/necrologio-detail.html
@@ -17,7 +17,13 @@
     <!-- Meta tag aggiuntivi per una migliore condivisione -->
     <meta property="og:site_name" content="Onoranze Funebri Santaniello">
     <meta property="og:locale" content="it_IT">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
+    <meta property="og:image:alt" content="Onoranze Funebri Santaniello">
     <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:image" content="">
+    <meta name="twitter:title" content="Necrologio - Onoranze Funebri Santaniello">
+    <meta name="twitter:description" content="Dettagli necrologio. Invia le tue condoglianze alla famiglia. Onoranze Funebri Santaniello.">
     
     <!-- Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
