--- a/necrologio-detail.html
+++ b/necrologio-detail.html
@@ -12,13 +12,19 @@
     <meta property="og:title" content="Necrologio - Onoranze Funebri Santaniello">
     <meta property="og:description" content="Dettagli necrologio. Invia le tue condoglianze alla famiglia. Onoranze Funebri Santaniello.">
     <meta property="og:image" content="">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
+    <meta property="og:image:type" content="image/jpeg">
     <meta property="og:url" content="">
+    <meta property="og:site_name" content="Onoranze Funebri Santaniello">
+    <meta property="og:locale" content="it_IT">
     
     <!-- Meta tag Twitter Card per condivisioni Twitter -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Necrologio - Onoranze Funebri Santaniello">
     <meta name="twitter:description" content="Dettagli necrologio. Invia le tue condoglianze alla famiglia. Onoranze Funebri Santaniello.">
     <meta name="twitter:image" content="">
+    <meta name="twitter:site" content="@santaniello_funeral">
     
     <!-- Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
