--- a/necrologio-detail.html
+++ b/necrologio-detail.html
@@ -11,10 +11,11 @@
     <meta property="og:type" content="article">
     <meta property="og:title" content="Necrologio - Onoranze Funebri Santaniello">
     <meta property="og:description" content="Dettagli necrologio. Invia le tue condoglianze alla famiglia. Onoranze Funebri Santaniello.">
-    <meta property="og:image" content="">
+    <meta property="og:image" content="https://funeral-websites-2.onrender.com/images/placeholder-person.svg">
+    <meta property="og:image:secure_url" content="https://funeral-websites-2.onrender.com/images/placeholder-person.svg">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
-    <meta property="og:image:type" content="image/jpeg">
+    <meta property="og:image:type" content="image/svg+xml">
     <meta property="og:url" content="">
     <meta property="og:site_name" content="Onoranze Funebri Santaniello">
     <meta property="og:locale" content="it_IT">
