--- a/necrologio-detail.html
+++ b/necrologio-detail.html
@@ -7,16 +7,16 @@
     <meta name="description" content="Dettagli necrologio. Invia le tue condoglianze alla famiglia. Onoranze Funebri Santaniello.">
     <meta name="keywords" content="necrologio, condoglianze, agenzia funebre, Santaniello">
     
-    <!-- Meta tag Open Graph per condivisioni social -->
+    <!-- Meta tag Open Graph per condivisioni social (popolati dinamicamente) -->
     <meta property="og:type" content="article">
-    <meta property="og:title" content="Necrologio - Onoranze Funebri Santaniello">
-    <meta property="og:description" content="Dettagli necrologio. Invia le tue condoglianze alla famiglia. Onoranze Funebri Santaniello.">
-    <meta property="og:image" content="https://funeral-websites-2.onrender.com/images/placeholder-person.svg">
-    <meta property="og:image:secure_url" content="https://funeral-websites-2.onrender.com/images/placeholder-person.svg">
-    <meta property="og:image:width" content="1200">
-    <meta property="og:image:height" content="630">
-    <meta property="og:image:type" content="image/svg+xml">
-    <meta property="og:url" content="">
+    <meta property="og:title" content="Necrologio - Onoranze Funebri Santaniello" id="og-title">
+    <meta property="og:description" content="Dettagli necrologio. Invia le tue condoglianze alla famiglia. Onoranze Funebri Santaniello." id="og-description">
+    <meta property="og:image" content="https://funeral-websites-2.onrender.com/images/placeholder-person.svg" id="og-image">
+    <meta property="og:image:secure_url" content="https://funeral-websites-2.onrender.com/images/placeholder-person.svg" id="og-image-secure-url">
+    <meta property="og:image:width" content="1200" id="og-image-width">
+    <meta property="og:image:height" content="630" id="og-image-height">
+    <meta property="og:image:type" content="image/svg+xml" id="og-image-type">
+    <meta property="og:url" content="" id="og-url">
     <meta property="og:site_name" content="Onoranze Funebri Santaniello">
     <meta property="og:locale" content="it_IT">
     
