--- a/necrologio-detail.html
+++ b/necrologio-detail.html
@@ -7,6 +7,15 @@
     <meta name="description" content="Dettagli necrologio. Invia le tue condoglianze alla famiglia. Onoranze Funebri Santaniello.">
     <meta name="keywords" content="necrologio, condoglianze, agenzia funebre, Santaniello">
     
+    <!-- Open Graph / Facebook - Populated dynamically at obituary creation -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="">
+    <meta property="og:title" content="Necrologio - Onoranze Funebri Santaniello">
+    <meta property="og:description" content="Dettagli necrologio. Invia le tue condoglianze alla famiglia. Onoranze Funebri Santaniello.">
+    <meta property="og:image" content="">
+    <meta property="og:site_name" content="Onoranze Funebri Santaniello">
+    <meta property="og:locale" content="it_IT">
+    
     <!-- Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
