--- a/admin.html
+++ b/admin.html
@@ -1399,7 +1399,7 @@
                 htmlTemplate = htmlTemplate.replace(
                     '</head>',
                     `<link rel="canonical" href="${obituaryUrl}">\n` +
-                    `<script>(function(){try{var ua=(navigator.userAgent||'').toLowerCase();var isBot=/(facebookexternalhit|facebook|whatsapp|twitter|slack|telegram|bot|crawl|spider|google|bing|yahoo)/i.test(ua);if(!isBot){window.location.replace('${obituaryUrl}');}}catch(e){}})();<\/script>\n</head>`
+                    `<script>(function(){try{var ua=(navigator.userAgent||'').toLowerCase();var isCrawler=/(facebookexternalhit|twitterbot|slackbot|telegrambot|linkedinbot|discordbot|bot|crawl|spider)/i.test(ua);if(!isCrawler){window.location.replace('${obituaryUrl}');}}catch(e){}})();<\/script>\n</head>`
                 );
                 
                 // Crea un blob con il contenuto HTML
