--- a/necrologio-detail.html
+++ b/necrologio-detail.html
@@ -324,6 +324,7 @@
 
     <script src="js/supabase-config.js"></script>
     <script src="js/main.js"></script>
+    <script src="js/og-upload-config.js"></script>
     <script src="js/necrologio-detail.js"></script>
     <script>
         // Initialize dynamic obituary page
