--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <title>Onoranze Funebri Santaniello - Servizi funebri di qualità</title>
     <meta name="description" content="Onoranze Funebri Santaniello offre servizi funebri completi con professionalità e rispetto. Necrologi online, casa funeraria, fiori e omaggi.">
     <meta name="keywords" content="agenzia funebre, servizi funebri, necrologi, casa funeraria, fiori, cremazione, sepoltura">
-    
+    <script>
+        window.OG_REDIRECT_ENDPOINT = 'https://funeral-websites-2.onrender.com/og/necrologio';
+    </script>
     <!-- Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
